FIX suite aux commentaires de fadel suite: 5- Cacher les NAS et le rendre visible seulement avec une slider. 6- Changé mon compte pour que les input de edit aient les informations. 7- Changé EDIT intervenants pour que les input de edit aient les informations.
+
Autres modifications diverses.
+
Ajout du document de remise et diagramme de cas d'utilisation.

--- a/Projet-INF1030/src/app/component/person/details-person/details-person.component.css
+++ b/Projet-INF1030/src/app/component/person/details-person/details-person.component.css
@@ -94,3 +94,15 @@ body{
 {
   text-align: center;
 }
+
+/*Change la couleur du slider.*/
+::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: whitesmoke;
+}
+::ng-deep .mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: green;
+}
+
+.toggle-p{
+  padding-top: 8px
+}
